--- a/components/ui/button.module.css
+++ b/components/ui/button.module.css
@@ -1,4 +1,4 @@
-.btn {
+  .btn {
     text-decoration: none;
     cursor: pointer;
     font: inherit;
@@ -9,6 +9,20 @@
     padding: 0.5rem 1.5rem;
     text-align: center;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
+  }
+
+  .linkbtn {
+    text-decoration: none;
+    cursor: pointer;
+    font: inherit;
+    font-size: small;
+    background-color: #be7303;
+    border: 1px solid #f3f7f6;
+    /* border-radius: 6px; */
+    color: #dafff7;
+    /* padding: 0.5rem 1.5rem; */
+    text-align: center;
+    /* box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2); */
   }
   
   .btn:hover,
