--- a/components/Layout/main-header.module.css
+++ b/components/Layout/main-header.module.css
@@ -5,11 +5,32 @@
     align-items: baseline;
     padding: 1rem 10%;
     height: 5rem;
+    background-color: #9d9dc1;
+  }
+
+  .topheader {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 1rem 10%;
+    height: 4rem;
     background-color: #202020;
   }
   
   .logo {
     font-size: 1.5rem;
+    color: white;
+    font-family: 'Fira', sans-serif;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #94fdfd;
+  }
+
+  .contactNo {
+    font-size: 1.0rem;
     color: white;
     font-family: 'Fira', sans-serif;
     height: 100%;
