--- a/components/Layout/main-header.module.css
+++ b/components/Layout/main-header.module.css
@@ -5,7 +5,13 @@
     align-items: baseline;
     padding: 1rem 10%;
     height: 5rem;
-    background-color: #9d9dc1;
+    background-color: blue;
+    border: 2px;
+    border-color: #190202;
+  }
+
+  .row {
+      height: 100%;
   }
 
   .topheader {
@@ -50,7 +56,19 @@
     color: #74dacc;
     font-size: 1rem;
   }
+
+  .teambox {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 4px;
+    background: #eff2ff;
+    padding: 15px;
+    margin-bottom: 30px;
+    min-height: 90%;
+  }
   
+ 
+
   @media (min-width: 768px) {
     .logo {
       font-size: 2.5rem;
